--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@types/howler": "^2.2.12",
+    "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "gsap": "^3.14.2",
+    "howler": "^2.2.4",
+    "leva": "^0.10.1",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "postcss": "^8.5.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "use-sound": "^5.0.0"
+    "three": "^0.182.0",
+    "use-sound": "^5.0.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^20",
